samples/_failures_safe/1761394095_b8c193_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55d1cde2.c: In function ‘main’:
./samples/SAFE/__tmp_55d1cde2.c:127:5: error: expected declaration or statement at end of input
  127 |     if (decompressed_size == input_len && memcmp(input_buffer, decompressed_buffer, input_len) == 0) {
      |     ^~
./samples/SAFE/__tmp_55d1cde2.c:127:5: error: expected declaration or statement at end of input
